# BOIDS

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cpp  object.cpp  object.h
src/controller/: object_creator.cpp  object_creator.h  user_interface.cpp  user_interface.h
src/model/: object.cpp  object.h  publisher.h  subscriber.h
src/view/: GLFwindow.cpp  GLFwindow.h  drawer.cpp  drawer.h
test/: glad_test.cpp  open_gl_test.cpp  test_glad  test_glad_test  test_glad_window  test_openGL  test_windowglad.cpp
